--- a/.gitignore
+++ b/.gitignore
@@ -442,4 +442,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+# vision api key
+hazel-cipher-314701-3c5c06b3d6d5.json
+
 # End of https://www.toptal.com/developers/gitignore/api/venv,node,django,vue,windows,macos,python,visualstudiocode
