--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,32 @@
 asgiref==3.3.4
+cachetools==4.2.2
+certifi==2020.12.5
+chardet==4.0.0
 Django==3.2.3
 django-cors-headers==3.7.0
 django-seed==0.2.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 Faker==8.2.0
+google-api-core==1.28.0
+google-auth==1.30.0
+google-cloud-vision==2.3.1
+googleapis-common-protos==1.53.0
+grpcio==1.38.0
+idna==2.10
+packaging==20.9
 Pillow==8.2.0
+proto-plus==1.18.1
+protobuf==3.17.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PyJWT==2.1.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+requests==2.25.1
+rsa==4.7.2
 six==1.16.0
 sqlparse==0.4.1
 text-unidecode==1.3
+urllib3==1.26.4
